syntax = "proto3";

package transfer;

service TransferController {
    rpc TransferTo (TransferData) returns (SuccessTransfer) {};
}

message TransferData {
    int32 id_client = 1;
    int32 value_to_transfer = 2;
    string cpf_target_client = 3;
}

message SuccessTransfer {
    int32 id = 1;
    string timestamp = 2;
}
